# Test-task-calculator

./: .gitignore  CMakeLists.txt  CircleButton.qml  CircleSymbolButton.qml  Main.qml  README.md  Resources.qrc  SecretMenu.qml  calculatorengine.cpp  calculatorengine.h  calculatorviewmodel.cpp  calculatorviewmodel.h  main.cpp
